--- a/Views/Usuario/HomeNutri.cshtml
+++ b/Views/Usuario/HomeNutri.cshtml
@@ -1005,6 +1005,13 @@
             color: #e0e0e0;
         }
 
+        .dark-mode #pedidosAceitos,
+        .dark-mode #pedidosPendentes {
+            background-color: #1e1e1e;
+            border-width: 0;
+
+        }
+
         .dark-mode .container,
         .dark-mode .list-group-item,
         .dark-mode .chat-message.nutricionista,
@@ -1020,6 +1027,17 @@
         .dark-mode .btn-dark-mode {
             background-color: #555;
         }
+
+
+        .btn-chat,
+        .btn-enviar-dieta,
+        .btn-grafico,
+        .btn-ver-sintomas {
+            background-color: #426841;
+            color: white
+        }
+
+
 
         .loader {
             border: 6px solid #f3f3f3;
@@ -1061,6 +1079,11 @@
             border-radius: 20px;
             padding: 10px 20px;
             transition: 0.3s;
+        }
+
+        button.btn-primary,
+        button.btn-secondary {
+            background-color: #426841;
         }
 
         #listPedidos li,
